# gatekeeper

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements-fallback.txt  requirements.txt
docs/: architecture.md  configuration.md  examples.md  troubleshooting.md
notebooks/: security_framework_demo.ipynb
scripts/: run_terminal.py
src/deepface_security_framework/: __init__.py  gateway.py
src/deepface_security_framework/config/: __init__.py  defaults.yaml  schema.py
src/deepface_security_framework/policy/: __init__.py  evaluator.py  reasons.py
src/deepface_security_framework/ui/: __init__.py  overlay.py  terminal_menu.py
src/deepface_security_framework/vision/: camera.py  emotion.py  identity.py
tests/: test_action_execution.py  test_identity_emotion_pipeline.py  test_policy_evaluator.py
